# concordia-protocol

./: .gitignore  BUG_REPORT.md  BUILD_RESULT.md  CHANGELOG.md  CLAUDE.md  CNAME  CONCORDIA_NEXT_FOUR_STAGES.md  CONTRIBUTING.md  COWORK_CONTEXT.md  KNOWN_ISSUES.md  L1_HANDOFF.md  L1_PR_BODY.md  LICENSE  M4_HANDOFF.md  M4_PR_BODY.md  M6_HANDOFF.md  M6_PR_BODY.md  MERGE_GATE_REPORT.md  MYPY_HANDOFF.md  MYPY_PR_BODY.md  README.md  REVIEW_MAP.md  SECURITY.md  SECURITY_AUDIT.md  SPEC.md  SPRINT_CONTRACT.md  SPRINT_EVAL.md  SPRINT_RESULT.md  attestation.schema.json  pyproject.toml  server.json
concordia/: __init__.py  __main__.py  agent.py  approval_receipt.py  attestation.py  auth.py  canonicalization.py  competence_proof.py  cosign.py  ctef.py  degradation.py  discovery.py  envelope.py  mandate.py  mandate_resolver.py  mcp_server.py  message.py  offer.py  predicate.py  predicate_resolver.py  receipt_bundle.py  registry.py  relay.py  sanctuary_bridge.py  schema_validator.py  session.py  signing.py  types.py  verascore.py  verification_audit.py  want_registry.py
docs/: A2A_COMPOSITION.md  A2CN_FULFILLMENT.md  EFFICIENCY_REPORT_DEPLOYMENT.md  cmpc_revocation.md  hahs_payload_composition.md  revocation_resolver.md  v0.6_migration.md  v0.6_predicate_primitive.md
examples/: demo_camera_negotiation.py  demo_quick_negotiation.py  freelance_design_negotiation.md  furniture_dormant_negotiation.md
js-sdk/: CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json
launch/: hackernews_post.md  pitch_devrel.md  twitter_thread.md
plugin/: .mcp.json  README.md
review/: A2A_Outreach_HN_DEVto.md  AWESOME_MCP_SERVERS_PR.md  BUILD_BRIDGE_CONFIG.md  CONCORDIA_AGENT_DISCOVERY_SPEC.md  MCP_REGISTRY_SUBMISSION.md  bridge-config.json
schemas/: approval_receipt.schema.json  attestation.schema.json  fulfillment_attestation.schema.json  predicate.json  receipt_bundle.schema.json  reference.schema.json  revocation_record.schema.json
tests/: conftest.py  generate_cosign_fixture.py  test_a2cn_dispute_resolved.py  test_agent_api_edges.py  test_agent_profile_signature_verification.py  test_approval_receipt.py  (+69 more)
(+161 files in other folders)
