[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "concordia"
version = "0.1.0"
description = "Reference implementation of the Concordia Protocol — structured negotiation between autonomous agents"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    { name = "Erik Newton", email = "erik@cimc.ai" },
]
dependencies = [
    "cryptography>=42.0",
    "jsonschema>=4.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
