[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "concordia-protocol"
version = "0.1.0"
description = "Reference implementation of the Concordia Protocol — structured negotiation between autonomous agents"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    { name = "Erik Newton", email = "eriknewton@gmail.com" },
]
keywords = ["negotiation", "agents", "protocol", "ai", "commerce", "a2a", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "cryptography>=42.0",
    "jsonschema>=4.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/eriknewton/concordia-protocol"
Repository = "https://github.com/eriknewton/concordia-protocol"
Documentation = "https://github.com/eriknewton/concordia-protocol/blob/main/SPEC.md"
Issues = "https://github.com/eriknewton/concordia-protocol/issues"

[tool.hatch.build.targets.wheel]
packages = ["concordia"]

[tool.pytest.ini_options]
testpaths = ["tests"]
